配路由、加缓存

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <!-- <link rel="icon" href="/logo.png" type="image/png"> -->
-    <link rel="icon" type="image/png" sizes="16x16" href='./assets/logo.png'>
-    <title>vue-cli</title>
+    <link rel="shortcut icon" type="image/icon" sizes="16x16" href="/static/images/logo_red.png">
+    <title>Vue 全家桶</title>
   </head>
   <body>
     <div id="app"></div>
