1、添加缓存对象的方法和删除缓存方法； 2、修改浏览器Tab页左侧的图标； 3、测试Array的物种数理方法

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <!-- <link rel="icon" href="/logo.png" type="image/png"> -->
-    <link rel="shortcut icon" type="image/icon" sizes="16x16" href="/static/images/logo_red.png">
+    <link rel="shortcut icon" type="image/icon" sizes="16x16" href="/static/images/icon_red.png">
     <title>Vue 全家桶</title>
   </head>
   <body>
