--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <!-- <link rel="icon" href="/logo.png" type="image/png"> -->
-    <link rel="shortcut icon" type="image/icon" sizes="16x16" href="/static/images/icon_red.png">
-    <title>Vue 全家桶</title>
+    <!--H5页面窗口自动调整到设备宽度，并禁止用户缩放页面-->
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
+    <!--忽略将页面中的数字识别为电话号码-->
+    <meta name="format-detection" content="telephone=no"/>
+    <!--忽略Android平台中对邮箱地址的识别-->
+    <meta name="format-detection" content="email=no"/>
+    <meta content="yes" name="apple-mobile-web-app-capable"/>
+    <meta content="black" name="apple-mobile-web-app-status-bar-style"/>
+      <link rel="shortcut icon" type="image/icon" sizes="16x16" href="/static/images/icon_red.png">
+    <title>Vue2.0组件开发</title>
   </head>
   <body>
     <div id="app"></div>
